--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "smooth-scrollbar": "^8.6.2"
+    "smooth-scrollbar": "^8.6.2",
+    "typewriter-effect": "^2.18.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
