--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.14.3",
     "smooth-scrollbar": "^8.6.2",
     "typewriter-effect": "^2.18.0"
   },
