--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "gsap": "^3.7.0",
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.14.3",
     "smooth-scrollbar": "^8.6.2",
+    "styled-components": "^5.3.0",
     "typewriter-effect": "^2.18.0"
   },
   "devDependencies": {
