--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.14.3",
+    "react-scroll": "^1.8.2",
     "smooth-scrollbar": "^8.6.2",
     "styled-components": "^5.3.0",
     "typewriter-effect": "^2.18.0"
