--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Michael Arnold <marnolddevelop@gmail.com>",
   "dependencies": {
     "gatsby": "^3.6.2",
+    "gatsby-link": "^3.9.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.6.0",
