--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Michael Arnold <marnolddevelop@gmail.com>",
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "gatsby": "^3.6.2",
     "gatsby-link": "^3.9.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
@@ -24,6 +25,7 @@
     "react-dom": "^16.9.0",
     "react-elastic-carousel": "^0.11.5",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.10.1",
     "react-modal": "^3.14.3",
     "react-scroll": "^1.8.2",
     "smooth-scrollbar": "^8.6.2",
